refactor: LLamaModel and  LLamaExecutor.

--- a/LLama/LLamaSharp.csproj
+++ b/LLama/LLamaSharp.csproj
@@ -70,4 +70,10 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Abstractions\ChatCompletion\" />
+    <Folder Include="Abstractions\Embeddings\" />
+    <Folder Include="Abstractions\TextCompletion\" />
+  </ItemGroup>
+
 </Project>
