--- a/LLama/LLamaSharp.csproj
+++ b/LLama/LLamaSharp.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net6.0;net7.0</TargetFrameworks>
     <RootNamespace>LLama</RootNamespace>
@@ -18,10 +17,12 @@
     <PackageIconUrl>https://avatars3.githubusercontent.com/u/44989469?s=200&amp;v=4</PackageIconUrl>
     <PackageTags>LLama, LLM, GPT, ChatGPT, NLP, AI, Chat Bot, SciSharp</PackageTags>
     <Description>
-      The .NET binding of LLama.cpp, providing APIs to run the model and deploy it on Web. For model weights to run, please go to https://github.com/SciSharp/LLamaSharp for more information.
+      The .NET binding of LLama.cpp, providing APIs to run the model and deploy it on Web. For model
+      weights to run, please go to https://github.com/SciSharp/LLamaSharp for more information.
     </Description>
     <PackageReleaseNotes>
-      LLamaSharp 0.4.0 supports better APIs than v0.3.0. Note that many break changes were made in this version. APIs of v0.3.0 were moved to LLama.Old namespace.
+      LLamaSharp 0.4.0 supports better APIs than v0.3.0. Note that many break changes were made in
+      this version. APIs of v0.3.0 were moved to LLama.Old namespace.
     </PackageReleaseNotes>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageOutputPath>packages</PackageOutputPath>
@@ -46,34 +47,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="runtimes/libllama.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>libllama.dll</Link>
+    <None Include="LLamaSharp.Runtime.targets">
+      <Pack>true</Pack>
+      <PackagePath>build</PackagePath>
     </None>
-    <None Include="runtimes/libllama-cuda11.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>libllama-cuda11.dll</Link>
-    </None>
-    <None Include="runtimes/libllama-cuda12.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>libllama-cuda12.dll</Link>
-    </None>
-    <None Include="runtimes/libllama.so">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>libllama.so</Link>
-    </None>
-    <None Include="runtimes/libllama-cuda11.so">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>libllama-cuda11.so</Link>
-    </None>
-    <None Include="runtimes/libllama-cuda12.so">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>libllama-cuda12.so</Link>
-    </None>
-      <None Include="runtimes/libllama.dylib">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>libllama.dylib</Link>
-    </None>
-</ItemGroup>
-
+  </ItemGroup>
 </Project>
