Libraries with MacOS Metal Support
Add metal libraries and ggml-metal.metal helper

--- a/LLama/LLamaSharp.Runtime.targets
+++ b/LLama/LLamaSharp.Runtime.targets
@@ -31,5 +31,9 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
             <Link>libllama.dylib</Link>
         </None>
+        <None Include="$(MSBuildThisFileDirectory)runtimes/ggml-metal.metal">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <Link>ggml-metal.metal</Link>
+        </None>    
     </ItemGroup>
 </Project>
