--- a/LLama.WebAPI/appsettings.json
+++ b/LLama.WebAPI/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ModelPath": "..\\..\\LLamaModel\\ggml-model-f32-q4_0.bin"
 }
