Add Instruct and Stateless support

--- a/LLama.Web/appsettings.json
+++ b/LLama.Web/appsettings.json
@@ -10,9 +10,9 @@
     "Models": [
       {
         "Name": "WizardLM-7B",
+        "MaxInstances": 2,
         "ModelPath": "D:\\Repositories\\AI\\Models\\wizardLM-7B.ggmlv3.q4_0.bin",
-        "ContextSize": 2048,
-        "MaxInstances": 4
+        "ContextSize": 2048
       }
     ],
     "Parameters": [
@@ -22,6 +22,10 @@
       }
     ],
     "Prompts": [
+      {
+        "Name": "None",
+        "Prompt": ""
+      },
       {
         "Name": "Alpaca",
         "Path": "D:\\Repositories\\AI\\Prompts\\alpaca.txt",
