--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,11 +35,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 6.0.x
-    - uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 7.0.x
+        with:
+            dotnet-version: | 
+                6.0.x
+                7.0.x
     #  workaround for actions/setup-dotnet#155
     - name: Clear package cache
       run: dotnet clean LLamaSharp.sln && dotnet nuget locals all --clear
