--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build: [linux-debug, linux-release, windows-debug, windows-release]
+        build: [macos-debug, macos-release, linux-debug, linux-release, windows-debug, windows-release]
         include:
           - build: linux-debug
             os: ubuntu-latest
@@ -20,12 +20,12 @@ jobs:
           - build: linux-release
             os: ubuntu-latest
             config: release
-          # - build: macos-debug
-          #   os: macos-latest
-          #   config: debug
-          # - build: macos-release
-          #   os: macos-latest
-          #   config: release
+          - build: macos-debug
+            os: self-hosted
+            config: debug
+          - build: macos-release
+            os: self-hosted
+            config: release
           - build: windows-debug
             os: windows-2019
             config: debug
@@ -33,8 +33,8 @@ jobs:
             os: windows-2019
             config: release
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-dotnet@v1
+    - uses: actions/checkout@v3
+    - uses: actions/setup-dotnet@v3
       with:
         dotnet-version: | 
           6.0.x
