--- a/LLama.Web/appsettings.json
+++ b/LLama.Web/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "LLamaOptions": {
+    "ModelCacheType": "Multiple",
     "Models": [
       {
         "Name": "WizardLM-7B",
