Preload model support

--- a/LLama.Web/appsettings.json
+++ b/LLama.Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "LLamaOptions": {
-    "ModelCacheType": "Multiple",
+    "ModelCacheType": "PreloadSingle",
     "Models": [
       {
         "Name": "WizardLM-7B",
