--- a/LLama.Web/appsettings.json
+++ b/LLama.Web/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "LLamaOptions": {
-    "ModelCacheType": "PreloadSingle",
+    "AppType": "WebApi",
+    "ModelCacheType": "Single",
     "Models": [
       {
         "Name": "WizardLM-7B",
