--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -3,6 +3,21 @@ on:
         - cron: "22 22 * * 2"
 
 jobs:
-    nothing:
-        runs-on: ubuntu-latest
-        steps: []
+    compile:
+        name: Compile
+        runs-on: ${{ matrix.os }}
+        strategy:
+            fail-fast: false
+            matrix:
+              build: [linux, windows, macos]
+              include:
+              - build: linux
+                os: ubuntu-latest
+              - build: macos
+                os: macos-latest
+              - build: windows
+                os: windows-2019
+        steps:
+        - uses: actions/checkout@v2
+        - name: "checkout llama.cpp"
+          run: git clone -–depth 1 https://github.com/ggerganov/llama.cpp.git
