--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -2,6 +2,8 @@ name: Update Binaries
 
 on:
     workflow_dispatch:
+    push:
+        branches: [cron_job]
     schedule:
         - cron: "22 22 * * 2"
 
