--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -31,6 +31,7 @@ jobs:
   compile-windows:
     name: Compile (Windows)
     strategy:
+      fail-fast: false
       matrix:
         include:
           - build: 'noavx'
@@ -41,10 +42,6 @@ jobs:
             defines: '-DLLAMA_BUILD_SERVER=ON -DLLAMA_AVX2=OFF'
           - build: 'avx512'
             defines: '-DLLAMA_BUILD_SERVER=ON -DLLAMA_AVX512=ON -DBUILD_SHARED_LIBS=ON'
-          - build: 'clblast'
-            defines: '-DLLAMA_BUILD_SERVER=ON -DLLAMA_CLBLAST=ON -DCMAKE_PREFIX_PATH="$env:RUNNER_TEMP/clblast"'
-          - build: 'openblas'
-            defines: '-DLLAMA_BUILD_SERVER=ON -DLLAMA_BLAS=ON -DLLAMA_BLAS_VENDOR=OpenBLAS -DBLAS_INCLUDE_DIRS="$env:RUNNER_TEMP/openblas/include" -DBLAS_LIBRARIES="$env:RUNNER_TEMP/openblas/lib/openblas.lib"'
     runs-on: windows-latest
     steps:
       - name: "checkout llama.cpp"
